4.4/a203a2a9ec34936277fa22d6e07ca1f859165205
ARM: zx: only build power domain code when CONFIG_PM=y

The newly added zx power domain code causes build errors in
some configurations:

warning: (PM_RMOBILE && SOC_ZX296702) selects PM_GENERIC_DOMAINS which has unmet direct dependencies (PM)
warning: (ARCH_EXYNOS) selects EXYNOS_THERMAL which has unmet direct dependencies (THERMAL && (ARCH_EXYNOS || COMPILE_TEST) && THERMAL_OF)
power/domain.c: In function 'genpd_queue_power_off_work':
power/domain.c:192:13: error: 'pm_wq' undeclared (first use in this function)
  queue_work(pm_wq, &genpd->power_off_work);
             ^
power/domain.c:192:13: note: each undeclared identifier is reported only once for each function it appears in

This ensures we don't try to enable it when CONFIG_PM is
disabled, mirroring what we do on most other platforms.

Signed-off-by: Arnd Bergmann <arnd@arndb.de>
Fixes: f15107f41282 ("ARM: zx: Add power domains for ZX296702")
Reviewed-by: Jun Nie <jun.nie@linaro.org>

